--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
         let table = "<table><tr><th>URL</th><th>Title</th></tr>";
         data.forEach(item => {
           table += `<tr>
-                      <td><a href="${item.URL}" target="_blank">${item.URL}</a></td>
+                      <td><a href="${item}" target="_blank">${item}</a></td>
                       <td>${item.Title || "—"}</td>
                     </tr>`;
         });
