--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,8 @@
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #ffe8e8, #fff7d1);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      padding: 20px;
     }
     .container {
       background: #fff;
@@ -19,7 +16,8 @@
       border-radius: 16px;
       box-shadow: 0 6px 24px rgba(0,0,0,0.1);
       text-align: center;
-      width: 500px;
+      max-width: 800px;
+      margin: 0 auto;
       border: 2px solid #ffe0e0;
     }
     h1 {
@@ -35,6 +33,7 @@
       margin-bottom: 15px;
       font-size: 15px;
       background: #fffafc;
+      box-sizing: border-box;
     }
     input[type=text]:focus {
       outline: none;
@@ -51,28 +50,49 @@
       font-size: 16px;
       cursor: pointer;
       transition: background 0.3s, transform 0.1s;
+      margin-bottom: 20px;
     }
     button:hover {
       background: #ffb347;
       transform: scale(1.03);
     }
     #results {
-      margin-top: 20px;
       text-align: left;
-      max-height: 300px;
-      overflow-y: auto;
+      width: 100%;
     }
     table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 20px;
     }
     th, td {
-      padding: 8px;
+      padding: 12px;
       border-bottom: 1px solid #eee;
+      text-align: left;
     }
     th {
       background: #fff0f6;
       color: #333;
+      position: sticky;
+      top: 0;
+    }
+    tr:hover {
+      background-color: #fffaf5;
+    }
+    a {
+      color: #ff6b8b;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+      color: #ff4d73;
+    }
+    .summary {
+      margin: 15px 0;
+      padding: 10px;
+      background: #f9f9f9;
+      border-radius: 8px;
+      font-weight: 500;
     }
   </style>
 </head>
@@ -91,7 +111,7 @@
       e.preventDefault();
       const url = document.getElementById("urlInput").value;
       const resultsDiv = document.getElementById("results");
-      resultsDiv.innerHTML = "<p>⏳ Crawling...</p>";
+      resultsDiv.innerHTML = "<p>⏳ Crawling... Please wait</p>";
 
       try {
         const res = await fetch("http://103.209.158.211:30000/crawl?url=" + encodeURIComponent(url));
@@ -103,7 +123,8 @@
           return;
         }
 
-        let table = "<table><tr><th>URL</th><th>Title</th></tr>";
+        let table = `<div class="summary">Found ${data.length} links</div>`;
+        table += "<table><tr><th>URL</th></tr>";
         data.forEach(item => {
           table += `<tr>
                       <td><a href="${item}" target="_blank">${item}</a></td>
