--- a/public/index.html
+++ b/public/index.html
@@ -64,20 +64,17 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      font-size: 14px; /* Slightly smaller font */
     }
     th, td {
-      padding: 6px 8px; /* Reduced padding for more compact rows */
+      padding: 12px;
       border-bottom: 1px solid #eee;
       text-align: left;
-      line-height: 1.3; /* Reduced line height */
     }
     th {
       background: #fff0f6;
       color: #333;
       position: sticky;
       top: 0;
-      padding: 8px; /* Slightly more padding for header only */
     }
     tr:hover {
       background-color: #fffaf5;
@@ -85,8 +82,6 @@
     a {
       color: #ff6b8b;
       text-decoration: none;
-      display: block; /* Make entire cell clickable */
-      padding: 2px 0; /* Minimal padding for links */
     }
     a:hover {
       text-decoration: underline;
@@ -98,7 +93,6 @@
       background: #f9f9f9;
       border-radius: 8px;
       font-weight: 500;
-      font-size: 14px;
     }
   </style>
 </head>
@@ -120,41 +114,18 @@
       resultsDiv.innerHTML = "<p>⏳ Crawling... Please wait</p>";
 
       try {
-        // For demonstration purposes, we'll simulate the API response
-        // In a real scenario, you would use the actual API call:
-        // const res = await fetch("http://103.209.158.211:30000/crawl?url=" + encodeURIComponent(url));
-        
-        // Simulate API response delay
-        await new Promise(resolve => setTimeout(resolve, 1000));
-        
-        // Sample data for demonstration
-        const sampleData = [
-          "/collect",
-          "/control/send",
-          "/control/expense",
-          "/control/advance",
-          "/compliance",
-          "/coin",
-          "https://blog.chip-in.asia/",
-          "https://developer.chip-in.asia",
-          "/careers",
-          "#contact",
-          "#contact",
-          "https://portal.chip-in.asia/login",
-          "https://onboarding.chip-in.asia",
-          "https://onboarding.chip-in.asia",
-          "/collect",
-          "control/send"
-        ];
+        const res = await fetch("http://103.209.158.211:30000/crawl?url=" + encodeURIComponent(url));
+        if (!res.ok) throw new Error("Failed to fetch data");
+        const data = await res.json();
 
-        if (sampleData.length === 0) {
+        if (data.length === 0) {
           resultsDiv.innerHTML = "<p>No links found.</p>";
           return;
         }
 
-        let table = `<div class="summary">Found ${sampleData.length} links</div>`;
+        let table = `<div class="summary">Found ${data.length} links</div>`;
         table += "<table><tr><th>URL</th></tr>";
-        sampleData.forEach(item => {
+        data.forEach(item => {
           table += `<tr>
                       <td><a href="${item}" target="_blank">${item}</a></td>
                     </tr>`;
