--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,10 @@
       margin-top: 20px;
     }
     th, td {
-      padding: 12px;
+      padding: 6px 8px;
       border-bottom: 1px solid #eee;
       text-align: left;
+      line-height: 1.3;
     }
     th {
       background: #fff0f6;
