--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       margin-top: 20px;
     }
     th, td {
-      padding: 6px 8px;
+      padding: 0px 7px;
       border-bottom: 1px solid #eee;
       text-align: left;
       line-height: 1.3;
@@ -83,6 +83,7 @@
     a {
       color: #ff6b8b;
       text-decoration: none;
+      font-size: 13px;
     }
     a:hover {
       text-decoration: underline;
